--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="./sass/styles.css" />
   </head>
   <body>
+    <h1>Find Country</h1>
+    <div class="container">
+      <input type="text" class="search-form" name="query" placeholder="Enter the country name" autocomplete="off" />
+
+      <div class="card-container"></div>
+    </div>
+
     <script src="./index.js"></script>
   </body>
 </html>
