--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
       <div class="card-container"></div>
     </div>
 
-    <script type="module" src="./index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
